--- a/jb_styles.css
+++ b/jb_styles.css
@@ -15,26 +15,208 @@
 
 */
 /* Structural Styles */
-div#maincontent {
+html {
+    margin: 0;
     width: 100%;
-    height: 600px;
-    background-image: url("ocean.jpg");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 body {
-    background-color: aliceblue;
+    background-color: white;
+    margin: 0;
+    width: 100%;
 }
 
-header {
-    display: grid;
-    grid-template-columns: 20% 80%;
-    background-color: beige;
+/* Promotion Bar */
+#promotionbar {
+    background-color: black;
+    text-align: center;
+    height: 30px;
+    padding-top: 10px;
+}
+
+#promotionbar a {
+    color: white;
+    font-size: 1.5em;
+
+}
+
+#promotionbar a:nth-of-type(2) {
+    color: orange;
+    font-size: .8em;
+    text-align: center;
+}
+
+/* Navigation Bar Styles */
+#navbar {
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(0, 64, 128);
+    border-bottom: 5px solid rgb(0, 64, 128);
 }
 
 nav {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: row;
+    padding-top: 20px;
 }
+
+#mainlogo {
+    width: 100%;
+    height: 100px;
+    background-image: url("jb_logo.png");
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+    background-repeat: no-repeat;
+    flex: 1;
+}
+
+@media all and (max-width: 600px) {
+
+    nav {
+        flex-wrap: wrap;
+    }
+
+    nav div {
+        flex-basis: 33%;
+    }
+}
+
+/* Removes underlining from links */
+a {
+    text-decoration: none;
+}
+
+/* Main Content Styles */
+div#maincontent {
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+    width: 100%;
+    margin: 0 auto;
+}
+
+div#image {
+    width: 100%-5px;
+    height: 500px;
+    background-image: url("banner.jpg");
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-bottom: 5px solid gray;
+}
+
+/* Intro styles */
+.intro {
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+}
+
+div#maincontent h1 {
+    text-align: center;
+    margin: 0;
+}
+
+p {
+    margin: 0;
+    font-size: 1.2em;
+    padding-left: 2px;
+    padding-top: 20px;
+}
+
+p:first-letter {
+    color: black;
+    float: left;
+    font-family: Georgia;
+    font-size: 75px;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+}
+
+
+
+/* Slang Styles */
+.slang {
+    padding-top: 10px;
+}
+
+/* Buy Now Style */
+.right {
+    height: 520px;
+    width: 100%;
+
+    background-image: url("https://www.surfertoday.com/images/stories/surfboardbuying.jpg");
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.buynow {
+    color: white;
+    margin: 0 auto;
+    font-size: 2em;
+    background-color: rgba(12, 10, 10, 0.575);
+    border: 3px solid rgba(207, 205, 205, 0.87);
+    position: absolute;
+    right: 70px;
+    top: 800px;
+}
+
+.buynow:hover {
+    color: grey;
+    background-color: white;
+}
+
+/* Footer Styles */
+footer {
+    background-color: rgb(105, 105, 105);
+    height: 200px;
+}
+
+
+/* Media Queries */
+
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {}
+
+/* 
+    ##Device = Laptops, Desktops
+    ##Screen = B/w 1025px to 1280px
+  */
+
+@media (min-width: 1025px) and (max-width: 1280px) {}
+
+/* 
+    ##Device = Tablets, Ipads (portrait)
+    ##Screen = B/w 768px to 1024px
+  */
+
+@media (min-width: 768px) and (max-width: 1024px) {}
+
+/* 
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {}
+
+/* 
+    ##Device = Low Resolution Tablets, Mobiles (Landscape)
+    ##Screen = B/w 481px to 767px
+  */
+
+@media (min-width: 481px) and (max-width: 767px) {}
+
+/* 
+    ##Device = Most of the Smartphones Mobiles (Portrait)
+    ##Screen = B/w 320px to 479px
+  */
+
+@media (min-width: 320px) and (max-width: 480px) {}
