--- a/jb_styles.css
+++ b/jb_styles.css
@@ -15,11 +15,13 @@
 
 */
 /* Structural Styles */
+
 html {
     margin: 0;
     width: 100%;
 }
 
+/* Sets basis color for background */
 body {
     background-color: white;
     margin: 0;
@@ -27,6 +29,7 @@ body {
 }
 
 /* Promotion Bar */
+/* Adds promo bar at top telling you about deal */
 #promotionbar {
     background-color: black;
     text-align: center;
@@ -34,12 +37,13 @@ body {
     padding-top: 10px;
 }
 
+/* Edits promo bars link */
 #promotionbar a {
     color: white;
     font-size: 1.5em;
-
 }
 
+/* The second link in the promo bar will be orange and smaller text size */
 #promotionbar a:nth-of-type(2) {
     color: orange;
     font-size: .8em;
@@ -47,6 +51,7 @@ body {
 }
 
 /* Navigation Bar Styles */
+/* Displays navbar with flex */
 #navbar {
     display: flex;
     flex-direction: row;
@@ -54,12 +59,14 @@ body {
     border-bottom: 5px solid rgb(0, 64, 128);
 }
 
+/* Gives padding to nav element */
 nav {
     display: flex;
     flex-direction: row;
     padding-top: 20px;
 }
 
+/* Main Jersey Boy Logo is the first in flex order, sets size */
 #mainlogo {
     width: 100%;
     height: 100px;
@@ -72,6 +79,7 @@ nav {
     flex: 1;
 }
 
+/* Poor attempt at making it mobile friendly
 @media all and (max-width: 600px) {
 
     nav {
@@ -81,7 +89,7 @@ nav {
     nav div {
         flex-basis: 33%;
     }
-}
+} */
 
 /* Removes underlining from links */
 a {
@@ -89,16 +97,36 @@ a {
 }
 
 /* Main Content Styles */
+/* Main content carries all other divs in it, displays them as flex */
 div#maincontent {
-    display: grid;
-    grid-template-columns: 20% 60% 20%;
+    display: flex;
+    display: -webkit-flex;
     width: 100%;
     margin: 0 auto;
 }
 
+/* Sets size of middle intro box */
+.intro {
+    flex: 3 1 600px;
+    -webkit-flex: 3 1 600px;
+}
+
+/* Sets size of left slang box */
+.slang {
+    flex: 1 3 200px;
+    -webkit-flex: 1 3 200px;
+}
+
+/* Sets size of right buy now box  */
+.right {
+    flex: 1 3 200px;
+    -webkit-flex: 1 3 200px;
+}
+
+/* The main Banner image at the top of the screen, sets the height of the div and sets the background image. adds bottom border */
 div#image {
-    width: 100%-5px;
-    height: 500px;
+    width: 100%;
+    height: 498px;
     background-image: url("banner.jpg");
     background-attachment: contain;
     background-repeat: no-repeat;
@@ -107,16 +135,19 @@ div#image {
 }
 
 /* Intro styles */
+/* Adds borders to the left and right */
 .intro {
     border-left: 5px solid black;
     border-right: 5px solid black;
 }
 
+/* Aligns the main heading in the center */
 div#maincontent h1 {
     text-align: center;
     margin: 0;
 }
 
+/* Sets font size of main paragraph padding from the left side and top*/
 p {
     margin: 0;
     font-size: 1.2em;
@@ -124,6 +155,7 @@ p {
     padding-top: 20px;
 }
 
+/* Sets a drop letter using first letter pseudoclass of the paragraph */
 p:first-letter {
     color: black;
     float: left;
@@ -138,15 +170,17 @@ p:first-letter {
 
 
 /* Slang Styles */
+/* Adds padding top and right of slang */
 .slang {
     padding-top: 10px;
+    padding-right: 10px;
 }
 
 /* Buy Now Style */
+/* Sets div height of empty buy now div and uses background image */
 .right {
     height: 520px;
     width: 100%;
-
     background-image: url("https://www.surfertoday.com/images/stories/surfboardbuying.jpg");
     background-attachment: contain;
     background-repeat: no-repeat;
@@ -154,6 +188,7 @@ p:first-letter {
 
 }
 
+/* Buy now button, set position using absolute positioning, relative was bugging for some reason, already spent too much time on it */
 .buynow {
     color: white;
     margin: 0 auto;
@@ -165,58 +200,15 @@ p:first-letter {
     top: 800px;
 }
 
+/* Buy now when hovered flips colors */
 .buynow:hover {
     color: grey;
     background-color: white;
 }
 
 /* Footer Styles */
+/* Sets footer color */
 footer {
     background-color: rgb(105, 105, 105);
     height: 200px;
 }
-
-
-/* Media Queries */
-
-/* 
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
-
-@media (min-width: 1281px) {}
-
-/* 
-    ##Device = Laptops, Desktops
-    ##Screen = B/w 1025px to 1280px
-  */
-
-@media (min-width: 1025px) and (max-width: 1280px) {}
-
-/* 
-    ##Device = Tablets, Ipads (portrait)
-    ##Screen = B/w 768px to 1024px
-  */
-
-@media (min-width: 768px) and (max-width: 1024px) {}
-
-/* 
-    ##Device = Tablets, Ipads (landscape)
-    ##Screen = B/w 768px to 1024px
-  */
-
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {}
-
-/* 
-    ##Device = Low Resolution Tablets, Mobiles (Landscape)
-    ##Screen = B/w 481px to 767px
-  */
-
-@media (min-width: 481px) and (max-width: 767px) {}
-
-/* 
-    ##Device = Most of the Smartphones Mobiles (Portrait)
-    ##Screen = B/w 320px to 479px
-  */
-
-@media (min-width: 320px) and (max-width: 480px) {}
